Fri Feb  5 14:28:17 PST 1999 Manish Singh <yosh@gimp.org>

	* esd-config.in: erk. NEVER include @CFLAGS@ or @LDFLAGS@ in these
	scripts. They should not be propagated to client packages

1999-02-03  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd.c: yeat another CPU usage fix, courtesy of Chutt

1999-02-01  Elliot Lee  <sopwith@redhat.com>

	* Revert session management changes until further discussion.

Mon Feb  1 01:24:43 PST 1999 Manish Singh <yosh@gimp.org>

	* esddsp.c: stupid interim hack for SNDCTL_DSP_GETOSPACE so x11amp 0.9a
	works properly

	* esddsp.in: -m flag to enable mixer support

1999-01-31  Yo Ric Dude  <ericmit@ix.netcom.com>

	* LICENSE, COPYING.LIB: Make some effort at license term disclosure.

1999-01-30  Yo Ric Dude  <ericmit@ix.netcom.com>

	* proto.c: corrected stream play/record/monitor protocol data lengths

1999-01-28  Felix Bellaby <felix@pooh.u-net.com>

	* session.c: implements session management protocol to avoid race
	conditions under gnome and allow for respawning.
	* Makefile.am, esd-config, config.in: add in SM checks.
	* esd.c (main): add SM argument passing, setup and ICE polling.
	* clients.c (wait_clients_and_data): add ICE to blocking select.
	
1999-01-26  Yo Ric Dude  <ericmit@ix.netcom.com>

	* clients.c: fixed recently broken autosuspend feature

	* esd-server.h, esd.c, players.c: move recorder_write guts to a
	separate function, to be used by monitors, and filters.

Mon Jan 25 03:16:30 PST 1999 Manish Singh <yosh@gimp.org>

	* esddsp.c: added a /dev/mixer wrapper. Set ESDDSP_MIXER=1 to
	for all /dev/mixer access to be trapped. It will save and load
	the mixer settings in ~/.esddsp.{name}.

1999-01-25  Yo Ric Dude  <ericmit@ix.netcom.com>

	* mix.c, proto.c: volume control wired into the mix functions.

1999-01-24  Yo Ric Dude  <ericmit@ix.netcom.com>

	* filter.c, players.c: fix filters to work with the translation
 	function pointers.

	* esdfilt.c: add some processing (double or halve the audio